adding resume generator

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -65,8 +65,8 @@
     "image": "resumegen",
     "category": "mern",
     "links": {
-      "view": "https://resumegenx.netlify.app/",
-      "code": "https://github.com/jigar-sable/resumegen"
+      "view": "https://resumegen0.netlify.app/",
+      "code": "https://github.com/nur637788/Resume-Generator"
     }
   },
   {
